# crypto-credit

./: .prettierrc.js  package.json
client/: craco.config.js  package.json  tailwind.config.js
client/public/: index.html
client/src/: App.tsx  config.ts  index.css  index.tsx  tailwind.css
client/src/components/: index.ts
client/src/components/Button/: Button.tsx
client/src/components/CancelListingForm/: CancelListingForm.tsx  index.ts
client/src/components/CreateOfferForm/: CreateOfferForm.tsx  index.ts
client/src/components/Header/: Header.tsx
client/src/hooks/: index.ts
client/src/pages/: index.ts
client/src/store/: index.ts  wallet.ts
client/src/utils/: contract.ts  format.ts  index.ts  time.ts  token.ts  wallet.ts
contracts/: crypto_credit.py
dipdup/: Dockerfile  dipdup.yml  docker-compose.yml  pyproject.toml
dipdup/crypto_credit/: models.py
dipdup/crypto_credit/handlers/main/: on_accept_offer.py  on_cancel_listing.py  on_cancel_offer.py  on_create_listing.py  on_create_offer.py  on_repay_loan.py
dipdup/crypto_credit/handlers/tezotopia_nft_registery/: on_marketplace_transfer.py  on_mint.py  on_transfer.py  on_update_attributes.py
dipdup/crypto_credit/helpers/: ipfs.py
dipdup/crypto_credit/types/crypto_credit/: storage.py
dipdup/crypto_credit/types/crypto_credit/parameter/: cancel_listing.py  create_listing.py  create_offer.py  repay_loan.py
dipdup/crypto_credit/types/tezotopia_nft_registery/: storage.py
dipdup/crypto_credit/types/tezotopia_nft_registery/parameter/: marketplace_transfer.py  mint.py  update_attributes.py
(+42 files in other folders)
