[tool.poetry]
name = "crypto-credit"
version = "0.0.0"
description = ""
authors = ["Naman Goyal <namangoyal4900@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dipdup = "^5.1.0"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
